--- a/package.json
+++ b/package.json
@@ -10,19 +10,23 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.2",
+    "dompurify": "^3.0.5",
     "firebase": "^10.4.0",
     "leaflet": "^1.9.4",
-    "dompurify": "^3.0.5",
-    "tailwindcss": "^4.1.13",
-    "postcss": "^8.4.40",
-    "autoprefixer": "^10.4.20"
+    "next": "15.5.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@types/estree": "^1.0.8",
+    "@types/json-schema": "^7.0.15",
+    "@types/node": "^24.3.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.0.0",
     "eslint-config-next": "15.5.2",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13"
   }
 }
