--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dompurify": "^3.0.5",
     "firebase": "^10.4.0",
+    "framer-motion": "^12.23.12",
     "leaflet": "^1.9.4",
     "next": "15.5.2",
     "react": "19.1.0",
