--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "dompurify": "^3.0.5",
     "firebase": "^10.4.0",
     "framer-motion": "^12.23.12",
