--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "dompurify": "^3.0.5",
-    "firebase": "^10.4.0",
+    "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
     "leaflet": "^1.9.4",
     "next": "15.5.2",
+    "next-pwa": "^5.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
