--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
   "description": "Connect manual workers to jobs quickly and efficiently.",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/icons/manualink.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/icons/manualinc.png",
       "sizes": "512x512",
       "type": "image/png"
     }
